--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,56 @@
-.content {
-    border: 2px;
-    border-color: red;
+body {
+    display: flex;
+    flex-direction: column;
+    background: #1F2937;
+}
+
+.header {
+    display: flex;
+    justify-content: space-around;
+    background: #1F2937;
+    color: white;
+}
+.logo {
+    font-size: 24px;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+    font-size: 24px;
+  }
+
+.headerlinks {
+    color: white;
+    display: flex;
+    gap: 20px;
+    font-size: 15px;
+}
+
+.sub2 {
+    background: #F9FAF8;
+    display: flex;
+    justify-content: center;
+    font-size: 32px;
+    font-weight: 900;
+    color: #1F2937;
+    padding: 20px;
+}
+.container {
+    background: #F9FAF8;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+img {
+    width: 100px;
+    height: 100px;
+    border: 2px solid#3882F6;
+    border-radius: 25px;
 }
